--- a/generator/model.html
+++ b/generator/model.html
@@ -8,19 +8,21 @@
 		<!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	</head>
 	<body>
-			<nav>
-				<ul>
+		<nav>
+			<ul>
 %%NAV%%
-				</ul>
-			</nav>
-		<div id="wrapper">
-			<section id="main">
-				<article>
-					<h1>%%TITRE%%</h1>
+			</ul>
+		</nav>
+		<section>
+			<header>
+				<h1>Projet ISN de Lucas et de Geoffrey</h1>
+				<p>Un éditeur d'image en ligne de commandes</p>
+			</header>
+			<article>
+				<h1>%%TITRE%%</h1>
 %%CONTENU%%
-				</article>
-			</section>
-		</div>
+			</article>
+		</section>
 		<footer>
 			<hr/>
 %%LICENSE%%
