--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
 		<!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	</head>
 	<body>
-			<nav>
-				<ul>
+		<nav>
+			<ul>
 <li><a href="index.html">À propos</a></li>
 <li><a href="Compilation.html">Compilation</a></li>
 <li><a href="Avancement.html">Avancement</a></li>
 <li><a href="https://github.com/GeoffreyFrogeye/PILG">Code source</a></li>
 
-				</ul>
-			</nav>
-		<div id="wrapper">
-			<section id="main">
-				<article>
-					<h1>À propos</h1>
+			</ul>
+		</nav>
+		<section>
+			<header>
+				<h1>Projet ISN de Lucas et de Geoffrey</h1>
+				<p>Un éditeur d'image en ligne de commandes</p>
+			</header>
+			<article>
+				<h1>À propos</h1>
 <h2>Le projet</h2>
 
 <p>Ceci est la création de Lucas et de Geoffrey pour l&#39;option Informatique et Sciences du Numérique qui sera présenté lors du Baccalauréat 2013/2014.</p>
@@ -31,9 +34,8 @@
 
 <p><em>Statut :</em> Prétotype</p>
 <img src="screen.png" alt="Capture d'écran du code" />
-				</article>
-			</section>
-		</div>
+			</article>
+		</section>
 		<footer>
 			<hr/>
 Copyright 2014 Geoffrey et Lucas
