--- a/Avancement.html
+++ b/Avancement.html
@@ -8,31 +8,33 @@
 		<!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	</head>
 	<body>
-			<nav>
-				<ul>
+		<nav>
+			<ul>
 <li><a href="index.html">À propos</a></li>
 <li><a href="Compilation.html">Compilation</a></li>
 <li><a href="Avancement.html">Avancement</a></li>
 <li><a href="https://github.com/GeoffreyFrogeye/PILG">Code source</a></li>
 
-				</ul>
-			</nav>
-		<div id="wrapper">
-			<section id="main">
-				<article>
-					<h1>Avancement</h1>
-<h4>Légende</h4>
+			</ul>
+		</nav>
+		<section>
+			<header>
+				<h1>Projet ISN de Lucas et de Geoffrey</h1>
+				<p>Un éditeur d'image en ligne de commandes</p>
+			</header>
+			<article>
+				<h1>Avancement</h1>
+<h3>Légende</h3>
 
 <ul><li><span class="todoEl todo_D">D</span> Définition réalisée</li><li><span class="todoEl todo_A">A</span> Algorithme réalisé</li><li><span class="todoEl todo_C">C</span> Code réalisé</li></ul>
 
-<h4>Liste générale</h4>
+<h3>Liste générale</h3>
 
 <p><em>Ordre donné à titre indicatif</em></p>
 
-<ul><li>Fonction principale</li><li>Fonction d&#39;analyse de commande<ul><li>Analyse de la commande</li><li>Analyse des arguments</li><li>Correspondance commandes ↔ fonctions</li></ul></li><li>Objets<ul><li>Fenêtre <span class="todoEl todo_D">D</span><ul><li>SDL <span class="todoEl todo_C">C</span></li><li>BGI <span class="todoEl todo_A">A</span></li></ul></li><li>Pixel <span class="todoEl todo_C">C</span></li><li>Image <span class="todoEl todo_D">D</span></li></ul></li><li>Fonctions <span class="todoEl todo_D">D</span><ul><li>Gestion de fichier<ul><li>Créer</li><li>Ouvrir</li><li>Enregistrer</li><li>Importer</li></ul></li><li>Édition<ul><li>Copier tout</li><li>Couper tout</li><li>Coller tout</li><li>Annuler</li><li>Refaire</li></ul></li><li>Couleur<ul><li>Teinte</li><li>Saturation</li><li>Luminosité</li><li>Contraste</li></ul></li><li>Dessin<ul><li>Trait</li><li>Rectangle</li><li>Cercle</li><li>Disque</li></ul></li><li>Géométrie<ul><li>Zoom</li><li>Pivot</li><li>Redimensionner</li></ul></li><li>Conversion du mode<ul><li>Binaire</li><li>Niveaux de gris</li><li>Couleur</li></ul></li><li>Aide</li></ul></li><li>Documentation</li></ul>
-				</article>
-			</section>
-		</div>
+<ul><li>Fonction principale</li><li>Fonction d&#39;analyse de commande<ul><li>Analyse de la commande</li><li>Analyse des arguments</li><li>Correspondance commandes ↔ fonctions</li></ul></li><li>Objets <span class="todoEl todo_D">D</span><ul><li>Fenêtre <span class="todoEl todo_D">D</span><ul><li>SDL <span class="todoEl todo_C">C</span></li><li>BGI <span class="todoEl todo_A">A</span></li></ul></li><li>Pixel <span class="todoEl todo_C">C</span></li><li>Image <span class="todoEl todo_C">C</span></li></ul></li><li>Fonctions <span class="todoEl todo_D">D</span><ul><li>Gestion de fichier <span class="todoEl todo_D">D</span><ul><li>Créer</li><li>Ouvrir</li><li>Enregistrer</li><li>Importer</li></ul></li><li>Édition<ul><li>Copier tout</li><li>Couper tout</li><li>Coller tout</li><li>Annuler</li><li>Refaire</li></ul></li><li>Couleur <span class="todoEl todo_D">D</span><ul><li>Teinte <span class="todoEl todo_D">D</span></li><li>Saturation <span class="todoEl todo_D">D</span></li><li>Luminosité <span class="todoEl todo_D">D</span></li><li>Contraste <span class="todoEl todo_D">D</span></li></ul></li><li>Dessin <span class="todoEl todo_D">D</span><ul><li>Trait</li><li>Rectangle</li><li>Cercle</li><li>Disque</li></ul></li><li>Géométrie <span class="todoEl todo_D">D</span><ul><li>Zoom</li><li>Pivot</li><li>Redimensionner</li></ul></li><li>Conversion du mode <span class="todoEl todo_D">D</span><ul><li>Binaire</li><li>Niveaux de gris</li><li>Couleur</li></ul></li><li>Aide</li></ul></li><li>Documentation</li></ul>
+			</article>
+		</section>
 		<footer>
 			<hr/>
 Copyright 2014 Geoffrey et Lucas
