--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>À propos</title>
+		<title>À propos - PILG</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="css/contenu.css" />
 		<link rel="stylesheet" href="css/miseEnPage.css" />
@@ -32,13 +32,15 @@
 
 <p>Ce programme est un éditeur basique d&#39;images <a href="http://fr.wikipedia.org/wiki/Portable_pixmap">PBM/PGM/PPM</a> s’exécutant en ligne de commande.</p>
 
-<p><em>Statut :</em> Prétotype</p>
+<p><em>Version :</em> Prétotype</p>
+
+<p><em>Status :</em> <a href="https://travis-ci.org/GeoffreyFrogeye/PILG"><img alt="Build Status" src="https://travis-ci.org/GeoffreyFrogeye/PILG.svg?branch=master"/></a></p>
 <img src="screen.png" alt="Capture d'écran du code" />
 			</article>
 		</section>
 		<footer>
 			<hr/>
-Copyright 2014 Geoffrey et Lucas
+Copyright 2014 Lucas et Geoffrey
 		</footer>
 	</body>
 </html>
