--- a/Compilation.html
+++ b/Compilation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Compilation</title>
+		<title>Compilation - PILG</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="css/contenu.css" />
 		<link rel="stylesheet" href="css/miseEnPage.css" />
@@ -43,7 +43,7 @@
 		</section>
 		<footer>
 			<hr/>
-Copyright 2014 Geoffrey et Lucas
+Copyright 2014 Lucas et Geoffrey
 		</footer>
 	</body>
 </html>
