--- a/generator/model.html
+++ b/generator/model.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>%%TITRE%%</title>
+		<title>%%TITRE%% - PILG</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="css/contenu.css" />
 		<link rel="stylesheet" href="css/miseEnPage.css" />
