--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <p>Ce programme est un éditeur basique d&#39;images <a href="http://fr.wikipedia.org/wiki/Portable_pixmap">PBM/PGM/PPM</a> s’exécutant en ligne de commande.</p>
 
-<p><em>Version :</em> Prétotype</p>
+<p><em>Version :</em> Alpha</p>
 
 <p><em>Status :</em> <a href="https://travis-ci.org/GeoffreyFrogeye/PILG"><img alt="Build Status" src="https://travis-ci.org/GeoffreyFrogeye/PILG.svg?branch=master"/></a></p>
 <img src="screen.png" alt="Capture d'écran du code" />
